--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="hu">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Tic-Tac-Toe</title>
+    <title>TicTacToe</title>
 </head>
-<body>
-    <header>
-        <h1>Tic-Tac-Toe Játék</h1>
-    </header>
 
+<body>
     <div id="tabla">
         <div id="n00" onclick="lepes('00')"></div>
         <div id="n01" onclick="lepes('01')"></div>
@@ -23,34 +21,66 @@
         <div id="n20" onclick="lepes('20')"></div>
         <div id="n21" onclick="lepes('21')"></div>
         <div id="n22" onclick="lepes('22')"></div>
+
     </div>
-
-
-    <script>
+</body>
+<script>
     let tabla = [
-        ["", "", ""],
-        ["", "", ""],
-        ["", "", ""]
-    ];
+        [" ", " ", " "],
+        [" ", " ", " "],
+        [" ", " ", " "]
+    ]
 
     let akt = "X";
+
+    function gyozelem(){
+        if(tabla[0][0] != " " && tabla[0][0] == tabla[0][1] && tabla[0][1] == tabla[0][2]) return true;
+        if(tabla[1][0] != " " && tabla[1][0] == tabla[1][1] && tabla[1][1] == tabla[1][2]) return true;
+        if(tabla[2][0] != " " && tabla[2][0] == tabla[2][1] && tabla[2][1] == tabla[2][2]) return true;
+
+        if(tabla[0][0] != " " && tabla[0][0] == tabla[1][0] && tabla[1][0] == tabla[2][0]) return true;
+        if(tabla[0][1] != " " && tabla[0][1] == tabla[1][1] && tabla[1][1] == tabla[2][1]) return true;
+        if(tabla[0][2] != " " && tabla[0][2] == tabla[1][2] && tabla[1][2] == tabla[2][2]) return true;
+
+        if(tabla[0][0] != " " && tabla[0][0] == tabla[1][1] && tabla[1][1] == tabla[2][2]) return true;
+        if(tabla[0][2] != " " && tabla[0][2] == tabla[1][1] && tabla[1][1] == tabla[2][0]) return true;
+
+        return false;
+    }
 
     function lepes(hova) {
         let sor = parseInt(hova[0]);
         let oszlop = parseInt(hova[1]);
-
-        if (tabla[sor][oszlop] == "") {
-
+        if (tabla[sor][oszlop] == " ")
+        {
             tabla[sor][oszlop] = akt;
-            document.getElementyById("n" + hova).innerText = akt;
+            document.getElementById("n" + hova).innerText = akt;
+
+            if(gyozelem()){
+                alert(akt + " nyert!");
+                tabla = [
+                    [" ", " ", " "],
+                    [" ", " ", " "],
+                    [" ", " ", " "]
+                ];
+            for (let i = 0; i <= 2; i++) {
+                for (let j = 0; j <= 2; j++) {
+                    document.getElementById("n" + i + j).innerText = " ";
+                }
+            }
+        }
+
 
             if (akt == "X") {
                 akt = "O";
-            } else {
+            }
+            else {
                 akt = "X";
             }
         }
+
     }
-    </script>
-</body>
+
+</script>
+
 </html>
